fix: [PL-26179]: Ensure overflow indicator management triggered when content changes (#738)

--- a/packages/uicore/src/components/ModalDialog/ModalDialog.css
+++ b/packages/uicore/src/components/ModalDialog/ModalDialog.css
@@ -87,6 +87,7 @@
   display: block;
   opacity: calc(1 * var(--showScrollTop));
   transition: opacity 0.15s ease-in-out;
+  z-index: 2;
 }
 
 .body::after {
